tests/fixtures/invalid/pow_str_bool_int.py
# Cannot call pow() with Str, Bool, Int
x = pow("hello", True, 1)
